[tool.poetry]
name = "donaldvibes"
version = "0.1.0"
description = ""
authors = ["Joao Caetano <jpvcaetano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tweepy = "^4.14.0"
openai = "^1.57.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
